FIX: Aligned the reminder text with the toggle in the note edit dialog

--- a/src/styles/scaffolding/form-groups.scss
+++ b/src/styles/scaffolding/form-groups.scss
@@ -106,7 +106,8 @@
             padding-top: $spacer-half;
             padding-bottom: $spacer-half;
             label{
-              display: inline-block;
+              display: flex;
+              align-items: center;
               position: relative;
               padding: 0 ($spacer-half * 0.5) 0 0;
             }
